<resources>
    <string name="app_name">Business-Card</string>
    <string name="label_business_cards">Cartões de visita</string>
    <string name="label_description_new_card">Novo cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Deslize a barra de cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Apagar</string>
    <string name="label_show_success">Registro inserido com sucesso.</string>
    <string name="label_share_to">Compartilhar</string>
    <string name="item_menu_1">Compartilhar</string>
    <string name="item_menu_2">Editar</string>
    <string name="item_menu_3">Excluir</string>
    <string name="item_menu_4">Buscar</string>
    <string name="item_menu_5">Ligar</string>
    <string name="item_menu_6">Favoritar</string>
    <string name="label_color_red">Cor vermelha</string>
    <string name="label_color_black">Cor negra</string>
    <string name="label_color_white">Cor branca</string>
    <string name="label_color_purple">Cor violeta</string>
    <string name="label_color_blue">Cor azul</string>
    <string name="label_color_green">Cor verde</string>
    <string name="label_color_yellow">Cor amarela</string>
    <string name="label_color_orange">Cor laranja</string>
    <string name="label_one">Consulta um registro</string>
</resources>