<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/color_red"
        android:title="@string/label_color_red"
        android:Color="@color/red_500"/>

    <item
        android:id="@+id/color_orange"
        android:title="@string/label_color_orange"
        android:Color="@color/orange_500"/>

    <item
        android:id="@+id/color_yellow"
        android:title="@string/label_color_yellow"
        android:Color="@color/yellow_500"/>

    <item
        android:id="@+id/color_green"
        android:title="@string/label_color_green"
        android:Color="@color/green_500"/>

    <item
        android:id="@+id/color_blue"
        android:title="@string/label_color_blue"
        android:Color="@color/blue_500"/>

    <item
        android:id="@+id/color_purple"
        android:title="@string/label_color_purple"
        android:Color="@color/purple_500"/>

    <item
        android:id="@+id/color_white"
        android:title="@string/label_color_white"
        android:Color="@color/white"/>
    <item
        android:id="@+id/color_black"
        android:title="@string/label_color_black"
        android:Color="@color/black"/>
</menu>